refactor(server): Update API path pattern to support multi-level paths
- Modify PATH_ROLE_MAP in LoginInterceptor, add '*' wildcard to support multi-level paths
- Update the addInterceptors method in WebConfig, using the new wildcard path pattern